refactor: remove operations model in all docs for exam
