# Back-end/server/database/models/userAccount.js
@@ -1,5 +1,4 @@
 const mongoose = require("mongoose");
-const Operation = require("./userOperation");
 
 
 const accountSchema = new mongoose.Schema(
@@ -7,7 +6,6 @@ const accountSchema = new mongoose.Schema(
 			name: String,
 			nbAccount: String, 
 			solde: Number,
-			operations: [Operation.schema],
 		},
 );
 module.exports = mongoose.model("Account", accountSchema);
