# Back-end/swagger.yaml
@@ -54,7 +54,7 @@ paths:
         "200":
           description: Signup Successfully
           schema:
-            $ref: "#/definitions/apiResponse"
+            $ref: "#/definitions/ApiResponse"
         "400":
           description: Invalid Fields
         "500":
@@ -228,24 +228,6 @@ definitions:
               type: string
             solde:
               type: number
-            operations:
-              type: array
-              items:
-                type: object
-                properties:
-                  _id:
-                    type: string
-                  date:
-                    type: string
-                    format: date
-                  title:
-                    type: string
-                  montant:
-                    type: number
-                  description:
-                    type: string
-                  category:
-                    type: string
 
 
   Login:
@@ -324,24 +306,6 @@ definitions:
                   type: string
                 solde:
                   type: number
-                operations:
-                  type: array
-                  items:
-                    type: object
-                    properties:
-                      _id:
-                        type: string
-                      date:
-                        type: string
-                        format: date
-                      title:
-                        type: string
-                      montant:
-                        type: number
-                      description:
-                        type: string
-                      category:
-                        type: string
 
   CategoriesResponse:
     type: object
